# Nova-Engine

./: .clang_format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.2  CMakeLists.txt.old  Dynamic-Voxel-Craft  Ignis.drawio  LICENSE  LICENSE.md  Makefile  Notepad.sh  Notepad.txt  README.md  build.sh  clean.sh  cmake_install.cmake  compile_shaders.sh  debug.sh  docker-compose.yml  dockerfile  install.md  resources.sh  run.sh  shaders.sh  test.sh
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt
app/cmake/: nova-engineConfig.cmake.in
app/engine/: engine copy.cpp_  engine.cpp  engine.cpp_  engine.hpp  engine.hpp_
app/engine/data/: render_data.hpp  rollingbuffer.cpp
app/engine/graphics/: buffer.cpp  buffer.hpp  debug.cpp  debug.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  frame_info.hpp  graphics.cpp  mesh.cpp  mesh.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  swap_chain.cpp  swap_chain.hpp  window.cpp  window.hpp
app/engine/modules/: module_manager.cpp  module_manager.hpp
app/engine/objects/: camera.cpp  camera.hpp  editor.cpp  editor.hpp  mesh.cpp  mesh_object.cpp  mesh_object.hpp  object.cpp  object.hpp  point_light_object.cpp  point_light_object.hpp
app/engine/systems/: console.cpp  console.cpp_  console.hpp  editor.cpp  editor.hpp  editor.hpp_  gui_system.cpp  gui_system.cpp_  gui_system.hpp  gui_system.hpp_  mesh_system.cpp  mesh_system.hpp  physics_system.cpp  physics_system.hpp  point_light_system.cpp
app/engine/utility/: console.cpp  console.hpp  editor.cpp  editor.hpp  gui_system.cpp  gui_system.hpp  macros.hpp  mesh_builder.hpp  resources.cpp  resources.hpp  util.cpp  util.hpp
app/include/: INovaModule.hpp  engine.hpp  graphics.hpp  mesh.hpp  object.hpp  object_ref.hpp  renderer.hpp  resources.hpp  transform.hpp  types.hpp  util.hpp
app/include/components/: mesh.hpp
app/include/core/: graphics.hpp
app/include/objects/: camera.hpp  mesh_object.hpp  object.hpp  point_light_object.hpp
app/include/types/: mesh.hpp
app/include/utility/: hash.hpp  types.hpp
app/networking/: client.cpp  client.hpp  main.cpp  network  server.cpp  server.hpp
app/resources/shaders/: circle.frag  mesh.frag  mesh.vert
app/src/: main.cpp
app/src/game/: engine.cpp
app/src/graphics/: device.cpp  frame_info.hpp  pipeline.hpp
app/src/graphics/objects/: camera.cpp  object.cpp  object.hpp  point_light_object.cpp
app/src/objects/: camera.hpp  editor.hpp  object.hpp  point_light_object.hpp
app/src/resources/shaders/: circle.vert
app/src/utility/: gui_system.cpp  logger.cpp  logger.hpp  resources.hpp  util.cpp
examples/demo-game/: resources.sh
examples/demo-game/app/: CMakeLists.txt  main.cpp
examples/demo_game/: resources.sh
examples/demo_game/app/: CMakeLists.txt  main.cpp
examples/demo_game/app/game/: game.cpp  game.hpp
examples/demo_game/app/resources/models/: Conious.mtl
examples/demo_game/app/resources/shaders/: mesh.vert
examples/demo_game/lib/: .gitignore
examples/editor/app/: CMakeLists.txt  main.cpp
examples/editor/app/game/: editor.cpp  editor.hpp
examples/editor/app/resources/shaders/: mesh.frag
include/: game.h  object.h  settings.h
modules/: CMakeLists.txt  README.md
modules/ExampleModule/app/: CMakeLists.txt
modules/ExampleModule/app/include/: FancyUtility.hpp  module.hpp
modules/example_module/app/: CMakeLists.txt  module.cpp
resources/shaders/: fragment.glsl  vertex.glsl
src/: game.cpp  main.cpp  object.cpp
src/app/: app.cpp  app.hpp
src/device/: device.cpp  device.hpp
src/game/: engine.cpp  game.cpp  game.hpp  movement.cpp  movement.hpp  object.hpp  settings.hpp  util.cpp  util.hpp
src/graphics/: buffer.hpp  camera.cpp  camera.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  frame_info.hpp  mesh.hpp  model.cpp  model.hpp  object.cpp  object.hpp  pipeline.cpp  pipeline.hpp  render_system.cpp  render_system.hpp  renderer.cpp  renderer.hpp  swap_chain.cpp  swap_chain.hpp  window.cpp  window.hpp
src/graphics/objects/: mesh_object.cpp  mesh_object.hpp  object.hpp  point_light_object.hpp
src/graphics/systems/: mesh_system.cpp  mesh_system.hpp  point_light_system.cpp  point_light_system.hpp  render_system.cpp  render_system.hpp
src/objects/: camera.cpp  mesh_object.cpp  object.cpp  object.hpp  point_light_object.cpp  point_light_object.hpp
src/pipeline/: pipeline.cpp  pipeline.hpp
src/resources/shaders/: circle.frag  circle.vert  fragment.frag  mesh.frag  mesh.vert  point_light_vert.vert  vertex.vert  vertex.vert.spv
src/utility/: resources.cpp  resources.hpp  util.hpp
src/window/: window.cpp  window.hpp
stash/: Stash.md  engine.cpp  engine.hpp  renderer.cpp  renderer.hpp  rollingbuffer.hpp
stash/networking/: networking.hpp  test.sh
